src/test/resources/functionly/bad/syntax/bad2.fly
public function (a, b)
begin
  return a + b;
end